--- a/index.html
+++ b/index.html
@@ -4,40 +4,68 @@
     <title>birthday</title>
     <meta charset="UTF-8" />
     <script src="triangles.js"></script>
+    <style>
+  .container{
+       background-color:lavender;
+       text-align: center;
+       margin-top: 10vh;
+       margin-left: 6rem;
+       margin-right: 6rem;
+       margin-bottom: 10vh;
+       color:1px solid black;
+       padding-top: 10px;
+       padding-bottom: 30px;
+      
+      }
+      button{
+        border: 1px solid black;
+        padding: 3px;
+        font-weight: bolder;
+        border-radius: 5px;
+
+      }
+      input{
+        margin: 1rem;
+      }
+     
+    </style>
   </head>
 
   <body>
-    <div id="app"></div>
+    <div class="container">
 
-    <h1>do you know aboout Triangles?</h1>
+    <h1>do you know aboout <span style="color: 
+      #4C1D95;">Triangles?</span></h1>
     <hr />
     <h2>A simple quiz !</h2><br>
-    <h3>what is the formula for area of triangle</h3>
+    <h3>1.what is the formula for area of triangle</h3>
        <small>1. 0.5*base*height <br>
           2.length*breadth <br>
           3.base+height <br></small>
       your option: <input type="text" id="qOne">
 
-      <h3>how many acute angles must an acute triangles have?</h3>
+      <h3>2.how many acute angles must an acute triangles have?</h3>
        <small>1. 2<br>
           2. 3 <br> 
           3. 4 <br>
         </small>
       your option: <input type="text" id="qTwo">
 
-      <h3>what is right angled triangle</h3>
+      <h3>3.what is right angled triangle</h3>
        <small>1. triangle with 90 deg <br>
           2.triangle with 180 deg  <br>
           3.triangle with 60 deg  <br></small>
       your option: <input type="text" id="qThree">
-      <h2 id="score">Submit to check score</h2>
+      <h2 id="score" style="color: 
+      #4C1D95;">Submit to check score</h2>
       <button onclick="getScore();">submit</button>
  <hr>
 
  Enter base :<input type="text" id="base">
  Enter height:<input type="text" id="height"> <br><br>
  <button onclick="getHypo();">calculate </button>
- <h2 id="area"></h2>
+ <h2 id="area" style="color: 
+ #4C1D95;"></h2>
 <br><br> <hr>
 
  <h3>Enter angles of triangle</h3>
@@ -47,7 +75,9 @@
  <br><br>
  <button id="angleButton" onclick="isTriangle();"> Check </button>
  
- <h2 id="isTriangle"></h2>
+ <h2 id="isTriangle" style="color: 
+ #4C1D95;"></h2>
+ </div>
  <br><br><hr>
 
 
