--- a/index.html
+++ b/index.html
@@ -65,7 +65,22 @@
  <hr>
 
  </div>
- <br><br><hr>
+ <br><br>
  </body>
+ <footer class="footer">
+  <div class="footer-header">connect with me</div>
+  <ul>
+      <li class="list-item-inline">
+         <a class="link "href="https://github.com/srinidhi9831"> github</a>
+      </li>
+      <li class="list-item-inline">
+        <a class="link "href="https://twitter.com/srinidh9831"> twitter</a>
+     </li>
+     <li class="list-item-inline">
+        <a class="link "href="https://www.linkedin.com/in/sri-nidhi-bab322222/"> linkedin</a>
+     </li>
+  </ul>
+</footer>
+
  <script src="triangles.js"></script>
 </html>
