bug: angle button fixed

--- a/area.html
+++ b/area.html
@@ -54,7 +54,7 @@
           <a class="link "href="https://twitter.com/srinidh9831"> twitter</a>
        </li>
        <li class="list-item-inline">
-          <a class="link "href="https://www.linkedin.com/in/sri-nidhi-bab322222/"> linkedin</a>
+          <a class="link "href="https://www.linkedin.com/in/srinidhi9831/"> linkedin</a>
        </li>
     </ul>
   </footer>
